2025-10-30 13:15  sanchouss_
	* Follow up with the fix for change from discussion 48226
	* Update scripts for GNU Autotools shipped with the log4cpp distribution to their fresh versions
	* Fixes for compilation warnings and spellings caught by Debian Patch

2024-08-23 21:31  sanchouss_
	* Discussion 48226 by Andrew E Page. Alter CMakeLists to allow installation paths for x86 and arm64 be different so that cross-compilation on single host is possible.

2023-03-11 17:30  sanchouss_
	* fix for bug 152: use timespec and clock_settime for c++11 and higher; use stime for glibc version lower than 2.31; none for other cases

2023-02-10 13:22  sanchouss_
	* Replace obsolete auto_ptr removed in C++17 with newer unique_ptr since C++11
	* Replace older Non-throwing dynamic exception specification throw() removed in C++20 with newer noexcept since C++11
	* Patch #49 C99 compatibility fix for snprintf configure check
	* va_copy is here since c++11; fallback to simple copy if standard is not specified or less than c++11

2017-07-13 08:48  sanchouss_
	* bug 146;
	* bug 147 - Being prepared for Removing Deprecated Exception Specifications from C++17

2016-11-11 18:48  sanchouss_

	* Numerous fixes;
	* Added .target property for the ConsoleAppender to allow printing to STDERR 
	* Added method Category::shutdownForced(). It releases more memory than shutdown() by deleting all appenders. 
	Category::shutdownForced() may be invoked several times, not only at the end of program.

2015-03-28 18:48  sanchouss_
	
	* Added DailyRollingFileAppender.cpp

2013-12-05 18:48  sanchouss_
	
	* Fixed bug#137. Adjusted git attributes for *.dsp files (bug #136)

2013-11-27 18:48  sanchouss_
	
	* Migrated from cvs to git scm. Url is ssh://USERNAME@git.code.sf.net/p/log4cpp/codegit 

	2012-10-15 18:48  sanchouss_
	
	* msvc10/ Converted solution for building from MSVC 2010 with small adjustments. Output is targeted 
	into building directory instead of system32 dir (due to windows UAC restrictions)